--- a/settings/project.json
+++ b/settings/project.json
@@ -11,6 +11,13 @@
     [
       false,
       true,
+      false,
+      true
+    ],
+    [
+      false,
+      false,
+      true,
       false
     ]
   ],
@@ -18,7 +25,8 @@
   "group-list": [
     "default",
     "tank",
-    "wall"
+    "wall",
+    "bullet"
   ],
   "start-scene": "2d2f792f-a40c-49bb-a189-ed176a246e49",
   "design-resolution-width": 960,
