--- a/settings/project.json
+++ b/settings/project.json
@@ -5,7 +5,8 @@
     ],
     [
       false,
-      false,
+      true,
+      true,
       true
     ],
     [
@@ -16,7 +17,7 @@
     ],
     [
       false,
-      false,
+      true,
       true,
       false
     ]
